# serializer version: 1
# name: test_terminal_failure_sequence
  dict({
    'posts': list([
      dict({
        'blocks': list([
          dict({
            'text': dict({
              'text': '*Thinking* · 0s',
              'type': 'mrkdwn',
            }),
            'type': 'section',
          }),
          dict({
            'elements': list([
              dict({
                'action_id': 'cancel_turn',
                'style': 'danger',
                'text': dict({
                  'text': 'Cancel',
                  'type': 'plain_text',
                }),
                'type': 'button',
                'value': '<turn-key>',
              }),
            ]),
            'type': 'actions',
          }),
        ]),
        'text': 'Thinking · 0s',
      }),
    ]),
    'updates': list([
      dict({
        'blocks': list([
          dict({
            'text': dict({
              'text': '*Thinking* · 12s',
              'type': 'mrkdwn',
            }),
            'type': 'section',
          }),
          dict({
            'elements': list([
              dict({
                'action_id': 'cancel_turn',
                'style': 'danger',
                'text': dict({
                  'text': 'Cancel',
                  'type': 'plain_text',
                }),
                'type': 'button',
                'value': '<turn-key>',
              }),
            ]),
            'type': 'actions',
          }),
        ]),
        'text': 'Thinking · 12s',
      }),
      dict({
        'blocks': list([
          dict({
            'text': dict({
              'text': '''
                The turn ended unexpectedly.
                The conversation and its workspace are kept.
                *Next:* Send your message again. If it keeps happening, share the request id with an admin.
                `rid: 01TESTREQUESTID0000000000`
              ''',
              'type': 'mrkdwn',
            }),
            'type': 'section',
          }),
          dict({
            'elements': list([
              dict({
                'text': '❌ Something went wrong · 12s · 500 in / 80 out · $0.003',
                'type': 'mrkdwn',
              }),
            ]),
            'type': 'context',
          }),
        ]),
        'text': '''
          Something went wrong: The turn ended unexpectedly.
          The conversation and its workspace are kept.
          Send your message again. If it keeps happening, share the request id with an admin.
          Request id: 01TESTREQUESTID0000000000
        ''',
      }),
    ]),
  })
# ---
# name: test_thinking_tool_then_success_sequence
  dict({
    'posts': list([
      dict({
        'blocks': list([
          dict({
            'text': dict({
              'text': '*Thinking* · 0s',
              'type': 'mrkdwn',
            }),
            'type': 'section',
          }),
          dict({
            'elements': list([
              dict({
                'action_id': 'cancel_turn',
                'style': 'danger',
                'text': dict({
                  'text': 'Cancel',
                  'type': 'plain_text',
                }),
                'type': 'button',
                'value': '<turn-key>',
              }),
            ]),
            'type': 'actions',
          }),
        ]),
        'text': 'Thinking · 0s',
      }),
    ]),
    'updates': list([
      dict({
        'blocks': list([
          dict({
            'text': dict({
              'text': '*Working* · 6s',
              'type': 'mrkdwn',
            }),
            'type': 'section',
          }),
          dict({
            'text': dict({
              'text': '''
                ```
                🖋️ Running a command
                ```
              ''',
              'type': 'mrkdwn',
            }),
            'type': 'section',
          }),
          dict({
            'elements': list([
              dict({
                'action_id': 'cancel_turn',
                'style': 'danger',
                'text': dict({
                  'text': 'Cancel',
                  'type': 'plain_text',
                }),
                'type': 'button',
                'value': '<turn-key>',
              }),
            ]),
            'type': 'actions',
          }),
        ]),
        'text': 'Working · 6s',
      }),
      dict({
        'blocks': list([
          dict({
            'text': 'Here is the answer.',
            'type': 'markdown',
          }),
          dict({
            'elements': list([
              dict({
                'text': '16s · 1.5k in / 320 out · $0.008',
                'type': 'mrkdwn',
              }),
            ]),
            'type': 'context',
          }),
          dict({
            'block_id': 'feedback_vote',
            'elements': list([
              dict({
                'action_id': 'feedback_vote:up',
                'text': dict({
                  'text': '👍',
                  'type': 'plain_text',
                }),
                'type': 'button',
              }),
              dict({
                'action_id': 'feedback_vote:down',
                'text': dict({
                  'text': '👎',
                  'type': 'plain_text',
                }),
                'type': 'button',
              }),
            ]),
            'type': 'actions',
          }),
        ]),
        'text': 'Here is the answer.',
      }),
    ]),
  })
# ---
